spring-db-cicd/spring-acr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring
  namespace: shwe1 # Added namespace where the deployment will be created
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
      - name: spring
        image: myacr127.azurecr.io/spring-db-cicd:latest   #use shwetha12712712/spring-boot-mongo-docker image if you want to provide db port dynamically, bcox in the dockerhandson image port is hardcoded
        ports:
        - containerPort: 8080
